--- a/_site.yml
+++ b/_site.yml
@@ -5,14 +5,16 @@ navbar:
   left:
     - text: "Academic Experience"
       href: academicExperience.html
+    - text: "Data Science for the Public Good"
+      href: dspg.html
     - text: "Teaching"
       href: teaching.html
     - text: "Research"
       href: research.html
     - text: "Speaking"
       href: talks.html
-    - text: "Software"
-      href: software.html
+    # - text: "Software"
+    #   href: software.html
     - text: "Personal Projects"
       href: personalProjects.html
     -
