--- a/_site.yml
+++ b/_site.yml
@@ -23,7 +23,7 @@ navbar:
       href: contact.html
     # - icon: ai-google-scholar ai-lg
     #   href: https://scholar.google.com/citations?user=tLbQTZMAAAAJ&hl=en
-    - icon: fa-file fa-lg
+    - icon: ai-cv ai-lg
       href: ./files/resume_Zemmels_10-29.pdf
     - icon: fab fa-github fa-lg
       href: http://github.com/jzemmels
