--- a/_site.yml
+++ b/_site.yml
@@ -11,8 +11,8 @@ navbar:
       href: teaching.html
     - text: "Research"
       href: research.html
-    - text: "Speaking"
-      href: talks.html
+    # - text: "Speaking"
+    #   href: talks.html
     # - text: "Software"
     #   href: software.html
     - text: "Personal Projects"
