--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,7 @@ jobs:
       - uses: r-lib/actions/setup-tinytex@master
       - name: Install known depedencies  
         run: |
-          Rscript -e "install.packages(c('bookdown', 'tidyverse', 'rmarkdown', 'knitr', 'devtools', 'here'))"
-          Rscript -e "devtools::install_github('ThinkR-open/attachment')"
+          Rscript -e "install.packages(c('rmarkdown', 'knitr', 'devtools'))"
       - name: Install unknown depedencies 
         run: |
           Rscript -e "attachment::install_if_missing(attachment::att_from_rmds(path = '.'))"
