--- a/_site.yml
+++ b/_site.yml
@@ -24,7 +24,7 @@ navbar:
     # - icon: ai-google-scholar ai-lg
     #   href: https://scholar.google.com/citations?user=tLbQTZMAAAAJ&hl=en
     - icon: ai-cv ai-lg
-      href: ./files/zemmelsCV.pdf
+      href: ./files/zemmels-cv.pdf
     - icon: fab fa-github fa-lg
       href: http://github.com/jzemmels
     - icon: fab fa-linkedin fa-lg
